Closed
Bug 43079
Opened 26 years ago
Closed 26 years ago
nsImapSearchResultSequence::Clear() crashes when the imap connection was cancled
Categories
(MailNews Core :: Networking: IMAP, defect, P3)
Tracking
(Not tracked)
VERIFIED
FIXED
M17
People
(Reporter: pavlov, Assigned: pavlov)
Details
(Keywords: crash, Whiteboard: [dogfood-][nsbeta2+])
nsImapSearchResultSequence::Clear() crashes when the imap connection was
cancled. mImpl is null.
patch (without whitespace changes):
Index: nsImapSearchResults.cpp
===================================================================
RCS file: /cvsroot/mozilla/mailnews/imap/src/nsImapSearchResults.cpp,v
retrieving revision 1.5
diff -u -b -w -r1.5 nsImapSearchResults.cpp
--- nsImapSearchResults.cpp 2000/06/13 08:33:19 1.5
+++ nsImapSearchResults.cpp 2000/06/19 21:06:42
@@ -44,12 +44,14 @@
void nsImapSearchResultSequence::Clear(void)
{
+ if (mImpl) {
PRInt32 i = mImpl->mCount;
while (0 <= --i) {
char* string = (char*)mImpl->mArray[i];
delete string;
}
nsVoidArray::Clear();
+ }
}
nsImapSearchResultSequence::~nsImapSearchResultSequence()
| Assignee | ||
Comment 1•26 years ago
|
||
this happens when you don't login to the default server and you try and change
to a different server.
| Assignee | ||
Updated•26 years ago
|
Status: NEW → ASSIGNED
Target Milestone: --- → M17
Putting on [dogfood-][nsbeta2+] radar.
Whiteboard: [dogfood-][nsbeta2+]
| Assignee | ||
Comment 3•26 years ago
|
||
checked in fix
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
We can test this in the UI by:
1. 2 IMAP accounts
2. When prompted to log into the first account, cancel the password dialog
3. Select the second IMAP account and login
Right?
QA Contact: lchiang → huang
| Assignee | ||
Comment 5•26 years ago
|
||
yes, that should do it.
Comment 6•26 years ago
|
||
By using Linux 07-26-08-M17 Commercial build
Verified that there are no crashes for the second IMAP connection when canceling
the first IMAP connection.
Marking as verified!!
Status: RESOLVED → VERIFIED
Comment 7•25 years ago
|
||
Adding keyword to bugs which already show a nsbeta2 triage value in the status
whiteboard so the queries don't get screwed up.
Keywords: nsbeta2
Updated•21 years ago
|
Product: MailNews → Core
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•