fix for nsImapSearchResultSequence::Clear() crash.  bug 43079.  r=mscott